# rssparser

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  benchmark.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  wheels.yml
crates/rssparser-core/: Cargo.toml
crates/rssparser-core/src/: atom.rs  date.rs  error.rs  json_emit.rs  json_feed.rs  lib.rs  model.rs  preprocess.rs  rdf.rs  rss.rs  xml_util.rs
crates/rssparser-py/: Cargo.toml
crates/rssparser-py/src/: lib.rs
plans/: rssparser-rust-rewrite.md
src/fastfeedparser/: __init__.py  main.py
src/rssparser/: __init__.py
tests/: test_encoding.py  test_feed_image.py  test_integration.py  test_integration_atom.py  test_integration_hardening.py  test_integration_rdf_json.py  test_integration_rss.py  test_json_emit.py  test_rssparser_smoke.py
tests/integration/: davidbau.json  foolcontrol.json  fwrarejazzvinylcollector.json  gamersnexus.json  json_feed_sample.expected.json  kagi.json  malformed_rss_namespaced.json  osm-pl.json  osm.json  postgis.json  pypy.json  stackoverflow.json  utf16_encoded.json  vintagehomeplans.json
