[package]
name = "rssparser-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Fast RSS/Atom/RDF/JSON feed parser — pure Rust core"
repository.workspace = true

[dependencies]
quick-xml = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
serde_json = "1"
encoding_rs = "0.8"
regex = "1"
once_cell = "1"
